# catcore-cpp

./: .gitignore  Makefile  README.md
doc/design/: core_module.xmind  modules.xmind
include/core/: Cx.h  CxCoreFunc.h  CxDebug.h  CxError.h  CxPreproc.h  CxTestCore.h  CxTypes.h  corelib.h  types.h
include/core/color/: color4b.h  color4f.h  packedcolor.h
include/core/common/: CxArgs.h  CxAtomic.h  CxDualQueue.h  CxFlags.h  CxHash.h  CxHashMap.h  CxInvasiveStrongPtr.h  CxList.h  CxList.hincomplete  CxMallocRef.h  CxMem.h  CxMsg.h  CxPODList.h  CxPODVector.h  CxQueue.h  CxRingID.h  CxStr.h  CxStrID.h  CxStrIDGen.h  CxSys.h  CxUUIDBlock.h  CxUtf8.h  CxVector.h
include/core/defer/: deferredaction.h  deferredexec.h  message.h  messagehandler.h  messagequeue.h  messagetypes.h  timedaction.h  timer.h
include/core/event/: CxSignal.h  CxSlot.h  event.h  eventqueue.h
include/core/geom/: CxTransform3D.h
include/core/geometry/: convexpoly2.h  convexpoly2f.h  convexpoly2i.h  point2.h  point2f.h  point2i.h  rect.h  rectf.h  recti.h  size2.h  size2f.h  size2i.h
include/core/io/: CxIODevice.h  asyncdatainputstream.h  asyncdataoutputstream.h  asyncinputstream.h  asyncinputtask.h  asyncobjectinputstream.h  asyncobjectoutputstream.h  asyncoutputstream.h  asyncoutputtask.h  datainputstream.h  dataoutputstream.h  file.h  filedescriptor.h  fileinputstream.h  fileoutputstream.h  filepath.h  inputstream.h  iomanager.h  objectinputstream.h  objectoutputstream.h  outputstream.h  serialisable.h  serialiser.h  streamdescriptor.h
include/core/math/: CxMat3.h  CxMat4.h  CxMat4x4.h  CxMath.h  CxQuat.h  CxVec2.h  CxVec3.h  CxVec4.h  angle.h  mat3.h  mat4.h  mathcore.h  quaternion.h  vec2.h  vec3.h  vec4.h
include/core/memory/: chunkmemoryallocator.h  dynamicchunkmemoryallocator.h  memoryallocator.h  memorymanager.h  poolmemoryallocator.h  stackmemoryallocator.h
include/core/osx/: corelib.h
include/core/signal/: signaldata.h  signalemitter.h  signalhandler.h
include/core/string/: CxNameGenerator.h  hungrystring.h  string.h  stringutils.h  unistring.h
include/core/sys/: system.h
include/core/threading/: CxBarrier.h  CxProcessManager.h  CxRunnable.h  (+17 more)
include/engine/: CatScratch.h
include/gl/: CxWindow.h
python/: project.py
src/core/: CxError.cpp  corelib.cpp
src/engine/: CatScratch.cpp
tests/: maker.py
tests/core/: test.py
tests/unit/Core/common/: CMakeLists.txt  CxContainerTestCode.h  CxHashMap_tests.cpp  CxMallocRef_tests.cpp  CxMem_tests.cpp  CxPODVector_tests.cpp  CxStrID_tests.cpp  CxStr_tests.cpp  CxSys_tests.cpp  CxVector_tests.cpp
tests/unit/Core/common/src/: CMakeLists.txt  CxArgs_tests.cpp  CxFlags_tests.cpp  CxMem_tests.cpp  CxMsg_tests.cpp  CxStrIDGen_tests.cpp  CxStr_tests.cpp  CxSys_tests.cpp  CxUtf8_tests.cpp
tests/unit/Core/io/src/file/: CMakeLists.txt  CxFile_tests.cpp
tests/unit/Core/time/src/: CMakeLists.txt  CxTime_tests.cpp
(+497 files in other folders)
